--- a/server/food_data/food_manifest.json
+++ b/server/food_data/food_manifest.json
@@ -1,48 +1,10 @@
 {
   "eventNames": [
-    "Thanksgiving Dinner - 1pm Thursday",
-    "Thanksgiving Supper - 6pm Thursday",
-    "Men's Breakfast - 9am Friday",
-    "Game Night - 6pm Friday"
+    "Bacon Christmas Dinner - 5pm"
   ],
   "attendees": [
     {
       "name": "Ben",
-      "entrees": [
-        {
-          "eventIndex": 0,
-          "content": "Smoked Turkey, Mashed Potatoes"
-        },
-        {
-          "eventIndex": 2,
-          "content": "Pancakes, English Muffins, Breakfast Sandwiches"
-        }
-      ]
-    },
-    {
-      "name": "Ashley",
-      "entrees": [
-        {
-          "eventIndex": 3,
-          "content": "Japanese Curry"
-        }
-      ]
-    },
-    {
-      "name": "Kathryn",
-      "entrees": [
-        {
-          "eventIndex": 0,
-          "content": "Green beans"
-        },
-        {
-          "eventIndex": 1,
-          "content": "Green salad"
-        }
-      ]
-    },
-    {
-      "name": "Stephen 4",
       "entrees": []
     }
   ]
