--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set DEBUG=*video-voting* && powershell npx nodemon index.js"
+    "start": "set DEBUG=*video-voting* && powershell npx nodemon index.js",
+    "start-mac": "DEBUG=*video-voting* npx nodemon index.js"
   },
   "author": "Benjamin Mosher",
   "license": "ISC",
