Update for Bacon summer picnic

--- a/server/food_data/food_manifest.json
+++ b/server/food_data/food_manifest.json
@@ -1,11 +1,16 @@
 {
   "eventNames": [
-    "Bacon Christmas Dinner - 5pm"
+    "Bacon Summer Picnic - 12pm"
   ],
   "attendees": [
     {
       "name": "Ben",
-      "entrees": []
+      "entrees": [
+        {
+          "eventIndex": 0,
+          "content": "Burgers, Brisket?"
+        }
+      ]
     }
   ]
 }
