Update dashboard for Thanksgiving 2025

--- a/server/food_data/food_manifest.json
+++ b/server/food_data/food_manifest.json
@@ -1,6 +1,6 @@
 {
   "eventNames": [
-    "Bacon Summer Picnic - 12pm"
+    "Mosher Thanksgiving - 12pm Nov 27th 2025 @ Mosher Farm"
   ],
   "attendees": [
     {
@@ -8,7 +8,7 @@
       "entrees": [
         {
           "eventIndex": 0,
-          "content": "Burgers, Brisket?"
+          "content": "Turkey, Brisket"
         }
       ]
     }
