Update for Bacon Christmas

--- a/server/food_data/food_manifest.json
+++ b/server/food_data/food_manifest.json
@@ -1,222 +1,14 @@
 {
   "eventNames": [
-      "Mosher Thanksgiving - 1pm Thursday Nov 27th 2025 @ Mosher Farm",
-      "Thanksgiving Supper - 6pm Thursday Nov 27th 2025 @ Mosher Farm",
-      "Men's Breakfast - 9am Friday Nov 28th 2025 @ Mosher Farm",
-      "Game Night - 6pm Friday Nov 28th 2025 @ Mosher Farm"
+      "Bacon Christmas Dinner - 5pm Saturday Dec 27th 2025 @ 18 Boulder Dr. Gorham ME"
   ],
   "attendees": [
       {
-          "name": "Ben and Ashley",
+          "name": "Ben, Ashley, and Jove",
           "entrees": [
               {
                   "eventIndex": 0,
-                  "content": "Turkey, Mashed Potatoes"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "Pancakes, English Muffins, Breakfast Sandwiches"
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "Brisket"
-              }
-          ]
-      },
-      {
-          "name": "Keith and Gigi Boyd",
-          "entrees": []
-      },
-      {
-          "name": "Kathryn and Kip Mosher-Boulé",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Green beans "
-              },
-              {
-                  "eventIndex": 1,
-                  "content": "Rolls for sandwiches "
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "Green salad "
-              }
-          ]
-      },
-      {
-          "name": "Joshua Young",
-          "entrees": []
-      },
-      {
-          "name": "Peggy",
-          "entrees": []
-      },
-      {
-          "name": "Richard",
-          "entrees": []
-      },
-      {
-          "name": "Ab",
-          "entrees": []
-      },
-      {
-          "name": "Dan",
-          "entrees": [
-              {
-                  "eventIndex": 1,
-                  "content": "Ham"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "Leftover ham, electric griddle"
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "Marcy's Cookies"
-              }
-          ]
-      },
-      {
-          "name": "Eric and Danielle",
-          "entrees": [
-              {
-                  "eventIndex": 1,
-                  "content": "Pies"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "can help in kitchen"
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "can make meal if needed"
-              }
-          ]
-      },
-      {
-          "name": "Barbara and Dan",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Sage Dressing "
-              }
-          ]
-      },
-      {
-          "name": "Mary Ann",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Cranberry sauce/relish, pies , (pecan and pumpkin)"
-              }
-          ]
-      },
-      {
-          "name": "Stephen III",
-          "entrees": [
-              {
-                  "eventIndex": 2,
-                  "content": "Doz. eggs, cranberry bars, coffee, (regular and decaf)"
-              }
-          ]
-      },
-      {
-          "name": "extra crispy",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "dinner rolls"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "English muffins"
-              }
-          ]
-      },
-      {
-          "name": "Liz",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "squash, creamed onion, apple crisp"
-              }
-          ]
-      },
-      {
-          "name": "Stephen 4",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Sweet potato casserole, Turkey-as needed,  Set-up"
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "Celebrity judge for pizza contest"
-              }
-          ]
-      },
-      {
-          "name": "Monica",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Director of banquet set-up, Ruth’s Chris sweet potato casserole, manager of Stephen IV"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "Monkey bread"
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "Buckeyes, derby bars."
-              }
-          ]
-      },
-      {
-          "name": "Marcia",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Turnip, wine,"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "Coffee cake, fruit"
-              }
-          ]
-      },
-      {
-          "name": "Diana and Steve",
-          "entrees": []
-      },
-      {
-          "name": "Erica and Kevin",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "Green Salad, Apple Pie"
-              },
-              {
-                  "eventIndex": 1,
-                  "content": "Can help/ Make something as needed"
-              },
-              {
-                  "eventIndex": 2,
-                  "content": "Can help/ Make something as needed"
-              },
-              {
-                  "eventIndex": 3,
-                  "content": "Can help/ Make something as needed"
-              }
-          ]
-      },
-      {
-          "name": "Samantha and Reid",
-          "entrees": [
-              {
-                  "eventIndex": 0,
-                  "content": "A sweet treat and a craft for the kids"
+                  "content": "Brisket or Pulled Pork, Hot Chocolate, Cookies"
               }
           ]
       }
